--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KeepTheTime_T_20220311">
+        <activity
+            android:name=".ViewMapActivity"
+            android:exported="false" />
         <activity
             android:name=".EditAppointmentActivity"
             android:exported="false" />
@@ -40,10 +42,10 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="n2vn9ci2hl" />
-
     </application>
 
 </manifest>
