--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KeepTheTime_T_20220311">
         <activity
+            android:name=".EditMyPlaceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManagePlacesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewMapActivity"
             android:exported="false" />
         <activity
